--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
   "private": true,
   "license": "MIT",
   "dependencies": {
+    "bootstrap": "^4.0.0-alpha.6",
     "firebase": "^4.0.0",
     "moment": "^2.18.1",
     "moment-with-locales-es6": "^2.18.1",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4"
+    "react": "^15.6.1",
+    "react-addons-css-transition-group": "^15.6.0",
+    "react-addons-transition-group": "^15.6.0",
+    "react-dom": "^15.6.1",
+    "reactstrap": "^4.8.0"
   },
   "devDependencies": {
     "react-scripts": "1.0.6"
