--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-addons-css-transition-group": "^15.6.0",
     "react-addons-transition-group": "^15.6.0",
     "react-dom": "^15.6.1",
+    "react-router-dom": "^4.1.1",
     "reactstrap": "^4.8.0"
   },
   "devDependencies": {
