--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^15.6.1",
     "react-addons-css-transition-group": "^15.6.0",
     "react-addons-transition-group": "^15.6.0",
+    "react-confirm-button": "0.0.3",
     "react-dom": "^15.6.1",
     "react-router-dom": "^4.1.1",
     "reactstrap": "^4.8.0"
